responsive fix on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -43,7 +43,12 @@ body {
   -webkit-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  height: 100%;
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+  scrollbar-width: none; /* Firefox */
+}
+
+html::-webkit-scrollbar {
+  display: none; /* Safari and Chrome */
 }
 
 :root {
@@ -83,7 +88,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
   background-color: #f4f4f4;
   margin: 0px;
 }
@@ -91,6 +95,8 @@ body {
 .main-container {
   display: flex;
   flex-direction: column;
+  height: 100%;
+  margin: 24px;
 }
 
 .container,
@@ -100,6 +106,7 @@ body {
   border-radius: 8px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   margin: 24px;
+  margin-top: 0px;
   display: flex;
   flex-direction: column;
   gap: 12px;
@@ -355,7 +362,6 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
   background: rgba(0, 0, 0, 0.7);
   z-index: 1000;
   justify-content: center;
@@ -589,8 +595,9 @@ body.dark-mode {
 
 /* Mobile styles */
 @media only screen and (max-width: 768px) {
-  .main-container {
-    transform: scale(0.55);
+  .table-results,
+  .demo-table-results {
+    font-size: 12px;
   }
 
   .table-results-container {
